--- a/index.html
+++ b/index.html
@@ -20,40 +20,40 @@
 
 
         <div class="container-busca">
-            <input placeholder="Buscar produtos...">
+            <input placeholder="Buscar produtos" class="input-pesquisa">
             <i class="fa-solid fa-magnifying-glass"></i>
         </div>
     </header>
 
     <div class="container-categorias">
         <nav>
-            <button class="botao-categoria ativo">
-            <i class="fa-solid fa-border-all"></i>
-            Todos
+            <button class="botao-categoria ativo" data-categoria="todos">
+                <i class="fa-solid fa-border-all"></i>
+                Todos
             </button>
-            <button class="botao-categoria">
-           <i class="fa-solid fa-mobile-screen-button"></i>
-            Smartphone
+            <button class="botao-categoria" data-categoria="smartphones">
+                <i class="fa-solid fa-mobile-screen-button"></i>
+                Smartphone
             </button>
-            <button class="botao-categoria">
-            <i class="fa-solid fa-tablet-screen-button"></i>
-            Tablet
+            <button class="botao-categoria" data-categoria="tablets">
+                <i class="fa-solid fa-tablet-screen-button"></i>
+                Tablet
             </button>
-            <button class="botao-categoria">
-            <i class="fa-solid fa-laptop"></i>
-            Notebooks
+            <button class="botao-categoria" data-categoria="laptops">
+                <i class="fa-solid fa-laptop"></i>
+                Notebooks
             </button>
-            <button class="botao-categoria">
-            <i class="fa-solid fa-headphones"></i>
-            Fones
+            <button class="botao-categoria" data-categoria="headphones">
+                <i class="fa-solid fa-headphones"></i>
+                Fones
             </button>
-            <button class="botao-categoria">
-            <i class="fa-solid fa-keyboard"></i>
-            Acessórios
+            <button class="botao-categoria" data-categoria="accessories">
+                <i class="fa-solid fa-keyboard"></i>
+                Acessórios
             </button>
-            <button class="botao-categoria">
-            <i class="fa-solid fa-clock"></i>
-            Smartwatches
+            <button class="botao-categoria" data-categoria="smartwatches">
+                <i class="fa-solid fa-clock"></i>
+                Smartwatches
             </button>
         </nav>
     </div>
@@ -62,9 +62,9 @@
         <h2>Black friday Antecipada!</h2>
         <p>Até 50% de Desconto! </p>
     </div>
-    
+
     <div class="produtos">
-        
+
         <div class="produtos-container">
             <!-- Produtos serão inseridos aqui via JavaScript -->
         </div>
@@ -72,7 +72,8 @@
 
 
     <footer>
-        <p>2026 - TechStore - Todos os direitos reservados.<p>
+        <p>2026 - TechStore - Todos os direitos reservados.
+        <p>
     </footer>
 </body>
 <script src="scripts.js"></script>
